--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
 <head>
     <meta charset="ITF-8">
-    <title>Document</title>
+    <title>Smidge</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>This is Smidge</h1>
+
+    <p>she is the goodest of girls</p>
+
+    <img src="smidge.jfif" />
 </body>    
 </html>
