--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="ITF-8">
-    <title>Smidge</title>
+    <title>Lorenzo Mondragon</title>
 </head>
 <body>
-    <h1>This is Smidge</h1>
+    <h1>Lorenzo Mondragon</h1>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Resume</a>
+        <a href="#">Projects</a>
+        <a href="#">Extras</a>
+    </nav>
 
     <p>she is the goodest of girls</p>
 
-    <img src="smidge.jfif" />
+    <img src="images/smidge.jfif" />
 </body>    
 </html>
