--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <a href="#">Resume</a>
         <a href="#">Projects</a>
         <a href="#">Extras</a>
+        <a href="#">Contact</a>
     </nav>
 
     <p>she is the goodest of girls</p>
