add photo banner & menu overlay

--- a/index.html
+++ b/index.html
@@ -2,17 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="ITF-8">
-    <title>Lorenzo Mondragon</title>
+    
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+<div class="top-header">
+    <div class="banner">
+        <div class="menu">
+            <a href="#">Home</a>
+            <a href="#">Resume</a>
+            <a href="#">Coding Projects</a>
+            <a href="#">YouTube</a>
+            <a href="#">Contact</a>   
+        </div>
+    </div>
+</div>
 <body>
     <h1>Lorenzo Mondragon</h1>
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Resume</a>
-        <a href="#">Projects</a>
-        <a href="#">Extras</a>
-        <a href="#">Contact</a>
-    </nav>
+    
 
     <p>she is the goodest of girls</p>
 
