--- a/index.html
+++ b/index.html
@@ -5,23 +5,26 @@
     
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<div class="top-header">
-    <div class="banner">
-        <div class="menu">
-            <a href="#">Home</a>
-            <a href="#">Resume</a>
-            <a href="#">Coding Projects</a>
-            <a href="#">YouTube</a>
-            <a href="#">Contact</a>   
+<body>
+    <div class="hero-image">
+        <div class="hero-text">
+            <div class="row">
+                <h2>Lorenzo Mondragon</h2>
+                <div class="menu">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Resume</a></li>
+                        <li><a href="#">Coding Projects</a></li>
+                        <li><a href="#">YouTube</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>         
+                </div>
+            </div>
         </div>
     </div>
-</div>
-<body>
-    <h1>Lorenzo Mondragon</h1>
-    
 
     <p>she is the goodest of girls</p>
-
     <img src="images/smidge.jfif" />
+
 </body>    
 </html>
