--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
+<header>
     <div class="hero-image">
         <div class="hero-text">
-            <div class="row">
+            <div class="name">
                 <h2>Lorenzo Mondragon</h2>
+            </div>
+
+            <nav>        
                 <div class="menu">
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -19,12 +22,14 @@
                         <li><a href="#">Contact</a></li>
                     </ul>         
                 </div>
-            </div>
+            </nav>
         </div>
     </div>
+</header>
 
-    <p>she is the goodest of girls</p>
-    <img src="images/smidge.jfif" />
+<body>
+<p>she is the goodest of girls</p>
+<img src="images/smidge.jfif" />
 
 </body>    
 </html>
