--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="ITF-8">
-    
+    <title>Lorenzo</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <header>
     <div class="hero-image">
         <div class="hero-text">
             <div class="name">
-                <h2>Lorenzo Mondragon</h2>
+                <p>Lorenzo Mondragon</p>
             </div>
 
             <nav>        
@@ -26,7 +26,6 @@
         </div>
     </div>
 </header>
-
 <body>
 <p>she is the goodest of girls</p>
 <img src="images/smidge.jfif" />
