update main tag

--- a/index.html
+++ b/index.html
@@ -5,30 +5,37 @@
     <title>Lorenzo</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<header>
-    <div class="hero-image">
-        <div class="hero-text">
-            <div class="name">
-                <p>Lorenzo Mondragon</p>
-            </div>
-
-            <nav>        
-                <div class="menu">
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="Reume/index.html">Resume</a></li>
-                        <li><a href="Projects/index.html">Coding Projects</a></li>
-                        <li><a href="Youtube/index.html">YouTube</a></li>
-                        <li><a href="Contact/index.html">Contact</a></li>
-                    </ul>         
-                </div>
-            </nav>
-        </div>
-    </div>
-</header>
 <body>
-<p>she is the goodest of girls</p>
-<img src="images/smidge.jfif" />
-
+    <header>
+        <div class="hero-image">
+            <div class="hero-text">
+                <div class="name">
+                    <p>Lorenzo Mondragon</p>
+                </div>
+    
+                <nav>        
+                    <div class="menu">
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="Reume/index.html">Resume</a></li>
+                            <li><a href="Projects/index.html">Coding Projects</a></li>
+                            <li><a href="Youtube/index.html">YouTube</a></li>
+                            <li><a href="Contact/index.html">Contact</a></li>
+                        </ul>         
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <div class="content">
+        <main>
+            <h1>About Me</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nisl enim, volutpat eu vehicula vel, pharetra ac felis. Ut tempus, dui eget tincidunt tincidunt, mauris risus gravida sem, eu scelerisque elit purus ac tellus. Donec interdum sollicitudin odio, hendrerit placerat nisi gravida ut. Sed aliquet justo sit amet mauris egestas bibendum. Etiam purus mauris, commodo quis dolor id, iaculis semper erat. Donec dictum odio enim, quis pulvinar nibh tempus at. Sed volutpat est a quam tempus porta. Mauris porta volutpat pellentesque. Nulla eu vestibulum dolor. Nullam congue risus ligula, at vestibulum mi congue sed. Nam porttitor malesuada ligula ut malesuada. Pellentesque hendrerit, sem a tincidunt rhoncus, odio risus interdum sem, vitae gravida tellus velit scelerisque lectus.</p>
+        </main>
+    </div>
+    <footer>
+        <img src="images/smidge.jfif" />
+        <p>This is Smidge</p>
+    </footer>
 </body>    
 </html>
