add to resume page

--- a/Reume/index.html
+++ b/Reume/index.html
@@ -2,8 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="ITF-8">
-
-    <link rel="stylesheet" type="text/css" href="css/resumeStyle.css">
+    <title>Lorenzo Resume</title>
+    <link rel="stylesheet" type="text/css" href="css/resume-style.css">
 </head>
+<body>
+    <header>
+        <div class="name">
+            <p>Lorenzo Mondragon</p>
+        </div>
+
+        <nav>        
+            <div class="menu">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="Reume/index.html">Resume</a></li>
+                    <li><a href="Projects/index.html">Coding Projects</a></li>
+                    <li><a href="Youtube/index.html">YouTube</a></li>
+                    <li><a href="Contact/index.html">Contact</a></li>
+                </ul>         
+            </div>
+        </nav> 
+    </header>
+    <div class="content">
+        <main>
+            <h1>Resume</h1>
+            <h2>Experience</h2>
+            <p>Lorem ipsum dolor sit amet</p>            
+            <p>Lorem ipsum dolor sit amet</p>
+            <h3>Technical Skills & Coursework</h3>
+            <p>Lorem ipsum dolor sit amet</p>            
+            <p>Lorem ipsum dolor sit amet</p>
+            <h4>Activies</h4>
+            <p>Lorem ipsum dolor sit amet</p>            
+            <p>Lorem ipsum dolor sit amet</p>
+            <h5>Honors & Awards</h5>
+            <p>Lorem ipsum dolor sit amet</p>            
+            <p>Lorem ipsum dolor sit amet</p>
+        </main>
+    </div>
+    <footer>
+        <img src="images/smidge.jfif" />
+        <p>This is Smidge</p>
+    </footer>
+</body>
+
 
 </html>
