update alot of stuff
updates broken links and adds footers to all pages.

--- a/Projects/index.html
+++ b/Projects/index.html
@@ -2,8 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="ITF-8">
-
-    <link rel="stylesheet" type="text/css" href="css/projectsStyle.css">
+    <title>Lorenzo Projects</title>
+    <link rel="stylesheet" type="text/css" href="../css/projects-style.css">
 </head>
+<body>
+    <header>
+        <div class="name">
+            <p>Lorenzo Mondragon</p>
+        </div>
 
+        <nav>        
+            <div class="menu">
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../Resume/index.html">Resume</a></li>
+                    <li><a href="../Projects/index.html">Coding Projects</a></li>
+                    <li><a href="../Youtube/index.html">YouTube</a></li>
+                    <li><a href="../Contact/index.html">Contact</a></li>
+                </ul>         
+            </div>
+        </nav> 
+    </header>
+    <div class="content">
+        <main>
+           
+        </main>
+    </div>
+    <footer>
+        <img src="../images/smidge.jfif" />
+        <p>This is Smidge</p>
+    </footer>
+</body>
 </html>
