--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <div class="menu">
                         <ul>
                             <li><a href="#">Home</a></li>
-                            <li><a href="Reume/index.html">Resume</a></li>
+                            <li><a href="Resume/index.html">Resume</a></li>
                             <li><a href="Projects/index.html">Coding Projects</a></li>
                             <li><a href="Youtube/index.html">YouTube</a></li>
                             <li><a href="Contact/index.html">Contact</a></li>
