--- a/Resume/index.html
+++ b/Resume/index.html
@@ -14,11 +14,11 @@
         <nav>        
             <div class="menu">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="Reume/index.html">Resume</a></li>
-                    <li><a href="Projects/index.html">Coding Projects</a></li>
-                    <li><a href="Youtube/index.html">YouTube</a></li>
-                    <li><a href="Contact/index.html">Contact</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../Resume/index.html">Resume</a></li>
+                    <li><a href="../Projects/index.html">Coding Projects</a></li>
+                    <li><a href="../Youtube/index.html">YouTube</a></li>
+                    <li><a href="../Contact/index.html">Contact</a></li>
                 </ul>         
             </div>
         </nav> 
@@ -67,7 +67,7 @@
         </main>
     </div>
     <footer>
-        <img src="images/smidge.jfif" />
+        <img src="../images/smidge.jfif" />
         <p>This is Smidge</p>
     </footer>
 </body>
