--- a/Projects/index.html
+++ b/Projects/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="ITF-8">
-    <title>Lorenzo Projects</title>
+    <title>Projects | Lorenzo Mondragon</title>
     <link rel="stylesheet" type="text/css" href="../css/projects-style.css">
 </head>
 <body>
