--- a/Resume/index.html
+++ b/Resume/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="ITF-8">
-    <title>Lorenzo Resume</title>
+    <title>Resume | Lorenzo Mondragon</title>
     <link rel="stylesheet" type="text/css" href="../css/resume-style.css">
 </head>
 <body>
