--- a/Youtube/index.html
+++ b/Youtube/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="ITF-8">
-    <title>Lorenzo YouTube</title>
+    <title>Videos | Lorenzo Mondragon</title>
     <link rel="stylesheet" type="text/css" href="../css/youtube-style.css">
 </head>
 <body>
