--- a/Contact/index.html
+++ b/Contact/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="ITF-8">
-    <title>Lorenzo Contact</title>
+    <title>Contact | Lorenzo Mondragon</title>
     <link rel="stylesheet" type="text/css" href="../css/contact-style.css">
 </head>
 <body>
