--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="ITF-8">
-    <title>Lorenzo</title>
+    <title>Lorenzo Mondragon</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -34,7 +34,7 @@
         </main>
     </div>
     <footer>
-        <img src="images/smidge.jfif" />
+        <img src="images/smidge-the-dog.jfif" />
         <p>This is Smidge</p>
     </footer>
 </body>    
