--- a/Resume/index.html
+++ b/Resume/index.html
@@ -55,8 +55,8 @@
                     <div class="job-row-2">
                         <div class="job1-bullet">
                             <ul>
-                                <li>Creates/maintains custom mobile friendly web applications for the College of Health and Human Sciences within Colorado State University.</li>
-                                <li>Performs QA testing for web applications using the ASP.NET framework, following Agile software development practices.</li>
+                                <li>Will help businesses design and deploy scalable, secure, and highly available applications on the Amazon Web Services (AWS) platform.</li>
+                                <li>Develop knowledge and skills in compute, networking, storage, and database AWS services as well as AWS deployment and management services.</li>
                             </ul>
                         </div>
                     </div>
@@ -69,7 +69,7 @@
                         </div>
                         <div class="job2-right">
                             <p><strong>Fort Collins, CO</strong></p>
-                            <p>Apr 2022 - Curent</p>
+                            <p><em>Apr 2022 - Current</em></p>
                         </div>
                     </div>
                     <div class="job-row-2">
@@ -88,7 +88,7 @@
                         </div>
                         <div class="job3-right">
                             <p><strong>Fort Collins, CO</strong></p>
-                            <p>July 2021 - Current</p>
+                            <p><em>July 2021 - Current</em></p>
                         </div>
                     </div>
                     <div class="job-row-2">
@@ -107,7 +107,7 @@
                         </div>
                         <div class="job4-right">
                             <p><strong>Centennial, CO</strong></p>
-                            <p>June 2017 - Sep 2020</p>
+                            <p><em>June 2017 - Sep 2020</em></p>
                         </div>
                     </div>
                     <div class="job-row-2">
@@ -144,16 +144,20 @@
             </div>
             <h4>Honors & Awards</h4>
             <div class="honors-wrapper">
-                <div class="honors">
+                <div class="honors-left">
                     <ul>
                         <li><strong>Top Paper Award (Session A),</strong> 2022 Colorado Undergraduate Space Research Symposium</li>
                         <li><strong>First Place Team,</strong> 2022 CSU VR Challenge</li>
+                    </ul>
+                </div>
+                <div class="honors-right">
+                    <ul>
                         <li><strong>NASA Community College Aerospace Scholar</strong></li>
                         <li><strong>Hispanic Scholarship Fund Scholar</strong></li>
                     </ul>
                 </div>
             </div>
-            <h5>Activies</h5>
+            <h5>Activities</h5>
             <div class="activites-wrapper">
                 <div class="activites-left">
                     <p><strong>CSU Robotics Team, </strong>Colorado State University</p>            
