update css for nav bar

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -8,17 +8,17 @@
 <body>
     <header>
         <div class="name">
-            <p>Lorenzo Mondragon</p>
+            <a href="../index.html">Lorenzo Mondragon</a>
         </div>
 
         <nav>        
             <div class="menu">
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../Resume/index.html">Resume</a></li>
-                    <li><a href="../Projects/index.html">Coding Projects</a></li>
-                    <li><a href="../Youtube/index.html">YouTube</a></li>
-                    <li><a href="../Contact/index.html">Contact</a></li>
+                    <li><a href="../resume/index.html">Resume</a></li>
+                    <li><a href="../projects/index.html">Coding Projects</a></li>
+                    <li><a href="../bookshelf/index.html">Bookshelf</a></li>
+                    <li><a href="../youtube/index.html">YouTube</a></li>
+                    <li><a href="../contact/index.html">Contact</a></li>
                 </ul>         
             </div>
         </nav> 
@@ -55,8 +55,8 @@
                     <div class="job-row-2">
                         <div class="job1-bullet">
                             <ul>
-                                <li>Will help businesses design and deploy scalable, secure, and highly available applications on the Amazon Web Services (AWS) platform.</li>
-                                <li>Develop knowledge and skills in compute, networking, storage, and database AWS services as well as AWS deployment and management services.</li>
+                                <li>Creates/maintains custom mobile friendly web applications for the College of Health and Human Sciences within Colorado State University.</li>
+                                <li>Performs QA testing for web applications using the ASP.NET framework, following Agile software development practices.</li>
                             </ul>
                         </div>
                     </div>
@@ -69,7 +69,7 @@
                         </div>
                         <div class="job2-right">
                             <p><strong>Fort Collins, CO</strong></p>
-                            <p><em>Apr 2022 - Current</em></p>
+                            <p>Apr 2022 - Curent</p>
                         </div>
                     </div>
                     <div class="job-row-2">
@@ -88,7 +88,7 @@
                         </div>
                         <div class="job3-right">
                             <p><strong>Fort Collins, CO</strong></p>
-                            <p><em>July 2021 - Current</em></p>
+                            <p>July 2021 - Current</p>
                         </div>
                     </div>
                     <div class="job-row-2">
@@ -107,7 +107,7 @@
                         </div>
                         <div class="job4-right">
                             <p><strong>Centennial, CO</strong></p>
-                            <p><em>June 2017 - Sep 2020</em></p>
+                            <p>June 2017 - Sep 2020</p>
                         </div>
                     </div>
                     <div class="job-row-2">
@@ -144,20 +144,16 @@
             </div>
             <h4>Honors & Awards</h4>
             <div class="honors-wrapper">
-                <div class="honors-left">
+                <div class="honors">
                     <ul>
                         <li><strong>Top Paper Award (Session A),</strong> 2022 Colorado Undergraduate Space Research Symposium</li>
                         <li><strong>First Place Team,</strong> 2022 CSU VR Challenge</li>
-                    </ul>
-                </div>
-                <div class="honors-right">
-                    <ul>
                         <li><strong>NASA Community College Aerospace Scholar</strong></li>
                         <li><strong>Hispanic Scholarship Fund Scholar</strong></li>
                     </ul>
                 </div>
             </div>
-            <h5>Activities</h5>
+            <h5>Activies</h5>
             <div class="activites-wrapper">
                 <div class="activites-left">
                     <p><strong>CSU Robotics Team, </strong>Colorado State University</p>            
