--- a/index.html
+++ b/index.html
@@ -7,27 +7,23 @@
 </head>
 <body>
     <header>
-        <div class="hero-image">
-            <div class="hero-text">
-                <div class="name">
-                    <p>Lorenzo Mondragon</p>
-                </div>
-    
-                <nav>        
-                    <div class="menu">
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="Resume/index.html">Resume</a></li>
-                            <li><a href="Projects/index.html">Coding Projects</a></li>
-                            <li><a href="Youtube/index.html">YouTube</a></li>
-                            <li><a href="Contact/index.html">Contact</a></li>
-                        </ul>         
-                    </div>
-                </nav>
-            </div>
+        <div class="name">
+            <a href="#">Lorenzo Mondragon</a>
         </div>
+        <nav>        
+            <div class="menu">
+                <ul>
+                    <li><a href="resume/index.html">Resume</a></li>
+                    <li><a href="projects/index.html">Coding Projects</a></li>
+                    <li><a href="bookshelf/index.html">Bookshelf</a></li>
+                    <li><a href="youtube/index.html">YouTube</a></li>
+                    <li><a href="contact/index.html">Contact</a></li>
+                </ul>         
+            </div>
+        </nav>
     </header>
     <div class="content">
+        <div class="hero-image"></div>
         <main>
             <h1>About Me</h1>
             <p>As a skilled backend developer with experience in C#, Entity Framework, Microsoft SQL Server, and building RESTful API’s, I'm passionate about leveraging technology to solve complex problems. My knowledge in these technologies has enabled me to develop high-quality applications that have served hundreds of users.
