--- a/Youtube/index.html
+++ b/Youtube/index.html
@@ -8,17 +8,17 @@
 <body>
     <header>
         <div class="name">
-            <p>Lorenzo Mondragon</p>
+            <a href="../index.html">Lorenzo Mondragon</a>
         </div>
 
         <nav>        
             <div class="menu">
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../Resume/index.html">Resume</a></li>
-                    <li><a href="../Projects/index.html">Coding Projects</a></li>
-                    <li><a href="../Youtube/index.html">YouTube</a></li>
-                    <li><a href="../Contact/index.html">Contact</a></li>
+                    <li><a href="../resume/index.html">Resume</a></li>
+                    <li><a href="../projects/index.html">Coding Projects</a></li>
+                    <li><a href="../bookshelf/index.html">Bookshelf</a></li>
+                    <li><a href="../youtube/index.html">YouTube</a></li>
+                    <li><a href="../contact/index.html">Contact</a></li>
                 </ul>         
             </div>
         </nav> 
