--- a/resume/index.html
+++ b/resume/index.html
@@ -55,8 +55,8 @@
                     <div class="job-row-2">
                         <div class="job1-bullet">
                             <ul>
-                                <li>Creates/maintains custom mobile friendly web applications for the College of Health and Human Sciences within Colorado State University.</li>
-                                <li>Performs QA testing for web applications using the ASP.NET framework, following Agile software development practices.</li>
+                                <li>Will help businesses design and deploy scalable, secure, and highly available applications on the Amazon Web Services (AWS) platform.</li>
+                                <li>Develop knowledge and skills in compute, networking, storage, and database AWS services as well as AWS deployment and management services.</li>
                             </ul>
                         </div>
                     </div>
