--- a/resume/index.html
+++ b/resume/index.html
@@ -169,7 +169,7 @@
         </main>
     </div>
     <footer>
-        <img src="../images/smidge.jfif" />
+        <img src="../images/smidge-the-dog.jfif" />
         <p>This is Smidge</p>
     </footer>
 </body>
