--- a/youtube/index.html
+++ b/youtube/index.html
@@ -25,11 +25,28 @@
     </header>
     <div class="content">
         <main>
-           
+            <div class="drone-video">
+                <h1>Drone Footage of Fort Collins, CO</h1>
+                <iframe width="560" height="315" 
+                src="https://www.youtube.com/embed/DSvg7OjB6tM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+                </iframe>
+            </div>
+            <div class="itx-video">
+                <h2>Computer Build (Parody Video)</h2>
+                <iframe width="560" height="315" 
+                src="https://www.youtube.com/embed/kQ4pzXxNHLo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+                </iframe>
+            </div>
+            <div class="sev-video">
+                <h3>Pixar Inspired Short Film</h3>
+                <iframe width="560" height="315" 
+                src="https://www.youtube.com/embed/kG80F62L5pc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+            </iframe>
+            </div>
         </main>
     </div>
     <footer>
-        <img src="../images/smidge.jfif" />
+        <img src="../images/smidge-the-dog.jfif" />
         <p>This is Smidge</p>
     </footer>
 </body>
