--- a/projects/index.html
+++ b/projects/index.html
@@ -29,7 +29,7 @@
         </main>
     </div>
     <footer>
-        <img src="../images/smidge.jfif" />
+        <img src="../images/smidge-the-dog.jfif" />
         <p>This is Smidge</p>
     </footer>
 </body>
