update file size

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
         </main>
     </div>
     <footer>
-        <img src="images/smidge-the-dog.jfif" />
-        <p>This is Smidge</p>
+        <p>2023 | Mondragon</p>
     </footer>
 </body>    
 </html>
