--- a/contact/index.html
+++ b/contact/index.html
@@ -29,8 +29,7 @@
         </main>
     </div>
     <footer>
-        <img src="../images/smidge-the-dog.jfif" />
-        <p>This is Smidge</p>
+        <p>2023 | Mondragon</p>
     </footer>
 </body>
 </html>
