change itf to utf

--- a/contact/index.html
+++ b/contact/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="ITF-8">
+    <meta charset="UTF-8">
     <title>Contact | Lorenzo Mondragon</title>
     <link rel="stylesheet" type="text/css" href="../css/contact-style.css">
 </head>
