--- a/resume/index.html
+++ b/resume/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-    <meta charset="ITF-8">
+    <meta charset="UTF-8">
     <title>Resume | Lorenzo Mondragon</title>
     <link rel="stylesheet" type="text/css" href="../css/resume-style.css">
 </head>
