--- a/youtube/index.html
+++ b/youtube/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="ITF-8">
+    <meta charset="UTF-8">
     <title>Videos | Lorenzo Mondragon</title>
     <link rel="stylesheet" type="text/css" href="../css/youtube-style.css">
 </head>
@@ -27,19 +27,19 @@
         <main>
             <div class="drone-video">
                 <h1>Drone Footage of Fort Collins, CO</h1>
-                <iframe defer="true" async="true" loading="lazy" width="560" height="315" 
+                <iframe defer="true" async="true" loading="lazy" width="550" height="305" 
                 src="https://www.youtube.com/embed/DSvg7OjB6tM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
                 </iframe>
             </div>
             <div class="itx-video">
                 <h2>Computer Build (Parody Video)</h2>
-                <iframe defer="true" async="true" loading="lazy" width="560" height="315" 
+                <iframe defer="true" async="true" loading="lazy" width="550" height="305" 
                 src="https://www.youtube.com/embed/kQ4pzXxNHLo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
                 </iframe>
             </div>
             <div class="sev-video">
                 <h3>Pixar Inspired Short Film</h3>
-                <iframe defer="true" async="true" loading="lazy" width="560" height="315" 
+                <iframe defer="true" async="true" loading="lazy" width="550" height="305" 
                 src="https://www.youtube.com/embed/kG80F62L5pc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
             </iframe>
             </div>
