--- a/bookshelf/index.html
+++ b/bookshelf/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="ITF-8">
+    <meta charset="UTF-8">
     <title>BookShelf | Lorenzo Mondragon</title>
     <link rel="stylesheet" type="text/css" href="../css/bookshelf-style.css">
 </head>
