--- a/youtube/index.html
+++ b/youtube/index.html
@@ -25,20 +25,24 @@
     </header>
     <div class="content">
         <main>
+            <div class="about">
+                <h1>Youtube - HeyLo!</h1>
+                <p></p>
+            </div>
             <div class="drone-video">
-                <h1>Drone Footage of Fort Collins, CO</h1>
+                <h2>Drone Footage of Fort Collins, CO</h2>
                 <iframe defer="true" async="true" loading="lazy" width="550" height="305" 
                 src="https://www.youtube.com/embed/DSvg7OjB6tM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
                 </iframe>
             </div>
             <div class="itx-video">
-                <h2>Computer Build (Parody Video)</h2>
+                <h3>Computer Build (Parody Video)</h3>
                 <iframe defer="true" async="true" loading="lazy" width="550" height="305" 
                 src="https://www.youtube.com/embed/kQ4pzXxNHLo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
                 </iframe>
             </div>
             <div class="sev-video">
-                <h3>Pixar Inspired Short Film</h3>
+                <h4>Pixar Inspired Short Film</h4>
                 <iframe defer="true" async="true" loading="lazy" width="550" height="305" 
                 src="https://www.youtube.com/embed/kG80F62L5pc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
             </iframe>
