--- a/youtube/index.html
+++ b/youtube/index.html
@@ -27,25 +27,44 @@
         <main>
             <div class="about">
                 <h1>Youtube - HeyLo!</h1>
-                <p></p>
+                <p>As an outlet for creative freedom I post content on YouTube.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
-            <div class="drone-video">
-                <h2>Drone Footage of Fort Collins, CO</h2>
-                <iframe defer="true" async="true" loading="lazy" width="550" height="305" 
-                src="https://www.youtube.com/embed/DSvg7OjB6tM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+            <div class="item-1">
+                <div class="drone-video">
+                    <h2>Drone Footage of Fort Collins, CO</h2>
+                    <iframe defer="true" async="true" loading="lazy" width="550" height="305" 
+                    src="https://www.youtube.com/embed/DSvg7OjB6tM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+                    </iframe>
+                </div>
+                <div class="drone-text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>                </div>
+            </div>
+            <div class="item-2">
+                <div class="itx-video">
+                    <h3>Computer Build (Parody Video)</h3>
+                    <iframe defer="true" async="true" loading="lazy" width="550" height="305" 
+                    src="https://www.youtube.com/embed/kQ4pzXxNHLo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+                    </iframe>
+                </div>
+                <div class="itx-text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+            </div>
+            <div class="item-3">
+                <div class="sev-video">
+                    <h4>Pixar Inspired Short Film</h4>
+                    <iframe defer="true" async="true" loading="lazy" width="550" height="305" 
+                    src="https://www.youtube.com/embed/kG80F62L5pc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
                 </iframe>
-            </div>
-            <div class="itx-video">
-                <h3>Computer Build (Parody Video)</h3>
-                <iframe defer="true" async="true" loading="lazy" width="550" height="305" 
-                src="https://www.youtube.com/embed/kQ4pzXxNHLo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-                </iframe>
-            </div>
-            <div class="sev-video">
-                <h4>Pixar Inspired Short Film</h4>
-                <iframe defer="true" async="true" loading="lazy" width="550" height="305" 
-                src="https://www.youtube.com/embed/kG80F62L5pc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-            </iframe>
+                </div>
+                <div class="sev-text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
             </div>
         </main>
     </div>
