--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Lorenzo Mondragon</title>
+    <meta name="description" content="Lorenzo Mondragon is a Web Developer and Student based in Fort Collins, CO">
+    <meta name="keywords" content="Developer, Software, Colorado">
+    <meta name="author" content="Lorenzo Mondragon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -23,7 +27,9 @@
         </nav>
     </header>
     <div class="content">
-        <div class="hero-image"></div>
+        <div class="hero-image">
+            <img src="images/lorenzo-mondragon-headshot.jpg" alt="Headshot of Lorenzo wearing a NASA polo">
+        </div>
         <main>
             <h1>About Me</h1>
             <p>As a skilled backend developer with experience in C#, Entity Framework, Microsoft SQL Server, and building RESTful API’s, I'm passionate about leveraging technology to solve complex problems. My knowledge in these technologies has enabled me to develop high-quality applications that have served hundreds of users.
