--- a/youtube/index.html
+++ b/youtube/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Videos | Lorenzo Mondragon</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/youtube-style.css">
 </head>
 <body>
