--- a/contact/index.html
+++ b/contact/index.html
@@ -26,7 +26,13 @@
     </header>
     <div class="content">
         <main>
-           
+           <h1>Contact</h1>
+           <p><strong>Business Inquiries</strong></p>
+           <p>lorenzo.mondragon@icloud.com</p>
+           <p>lorenzo.mondragon@colostate.edu</p>
+           <p><strong>Add me on Social Media</strong></p>
+           <p><a href="https://www.linkedin.com/in/lorenzo-mondragon/">LinkedIn</a></p>
+           <p><a href="https://www.youtube.com/@hey_lo">YouTube</a></p>
         </main>
     </div>
     <footer>
