--- a/projects/index.html
+++ b/projects/index.html
@@ -25,12 +25,11 @@
             <div class="intro">
                 <h1>681 Contributions in the last year and counting...</h1>
                 <img src="../images/GitHub Heatmap.png" alt="Heatmap calendar of the number of contributions on GitHub">
-                <p>I work as a web developer for Colorado State University's College of health and Human Sciences.</p>
-                <p>Most of my contributions are to private repositopries for work that I cannot show, however I have some personal projects that showcase some of my work.</p>
+                <p>Most of my contributions are to private repositories for work that I cannot show, however I have some personal projects that showcase some of my work.</p>
             </div>
             <div class="p1">
                 <a href="https://github.com/Ldragon27/Ldragon27.github.io"><h1>Personal Website</h1></a>
-                <p>This is getting meta! You are currently on the website I'm showing here. If you are querious on how exactly I built it follow this link to see most of the code.</p>
+                <p>This is getting meta! You are currently on the website I'm showing here. If you are curious on how exactly I built it follow this link to see most of the code.</p>
                 <p>Tech Stack:</p>
                 <ul>
                     <li>HTML</li>
@@ -40,8 +39,8 @@
             </div>
             <div class="p2">
                 <a href="https://github.com/Ldragon27/ChatGPTProofOfConcept"><h2>GPT 3.5 Web App</h2></a>
-                <p>This web app is using an open source waraper for Open Ai's GPT API to implament text completion for user input.</p>
-                <p>Whenever I have more time I would love to implament more GPT features. Stay tuned for updates!</p>
+                <p>This web app is using an open-source wrapper for Open Ai's GPT API to implement text completion for user input.</p>
+                <p>Whenever I have more time, I would love to implement more GPT features. Stay tuned for updates!</p>
                 <p>Tech Stack</p>
                 <ul>
                     <li>C#</li>
@@ -51,8 +50,8 @@
             </div>
             <div class="p3">
                 <a href="https://github.com/Ldragon27/ClassroomMonitor"><h3>People Counter</h3></a>
-                <p>People Counter was a fun project to build. The basic idea is that a Time-of-Flight senser connected to a Raspberry Pi determins weather or not a person is crosing infront of it.</p>
-                <p>The Pi is acting as a server and a separate desktop is the web client. They communicate data to eachother using Socket connections.</p>
+                <p>People Counter was a fun project to build. The basic idea is that a Time-of-Flight senser connected to a Raspberry Pi determines whether or not a person is crossing in front of it.</p>
+                <p>The Pi acts as a server and a separate desktop is the web client. They communicate data to each other using Socket connections.</p>
                 <p>Tech Stack</p>
                 <ul>
                     <li>C# (Web CLient)</li>
@@ -64,7 +63,7 @@
             <div class="p4">
                 <a href="https://github.com/Ldragon27/VR-Basics"><h4>Unity VR Development</h4></a>
                 <p>This is part 1 of 3 in Unity's VR Development corse.</p>
-                <p>I believe that VR/AR will become more important over the next few years, so I started the journy to learning how to develop VR experiences using Unity.</p>
+                <p>I believe that VR/AR will become more important over the next few years, so I started the journey to learning how to develop VR experiences using Unity.</p>
                 <p>Tech Stack</p>
                 <ul>
                     <li>Unity Game Engine</li>
