update resume & projects

--- a/projects.html
+++ b/projects.html
@@ -28,34 +28,32 @@
         <section class="projects-grid">
             <div class="project-card">
                 <div class="project-content">
-                    <h3>Automated CI/CD Pipeline for Snowflake</h3>
-                    <p class="project-description">Developed a continuous integration and deployment (CI/CD) pipeline to manage Snowflake database changes. This project automated the process of testing and deploying SQL scripts from a GitHub repository to Snowflake environments, ensuring code quality and reducing manual deployment errors.</p>
+                    <h3>Data Pipeline for Airflow</h3>
+                    <p class="project-description">This repository showcases an ETL (Extract, Transform, Load) process using Apache Airflow, aimed at demonstrating my capabilities as a data engineer. The project includes custom Docker configurations to set up the environment, and an Airflow DAG that extracts data from an XML file, transforms it into structured data, and loads it into an MS SQL database.</p>
                     <div class="tech-stack">
-                        <span>Snowflake</span>
+                        <span>Docker</span>
                         <span>Python</span>
-                        <span>GitHub Actions</span>
+                        <span>Airflow</span>
                         <span>SQL</span>
-                        <span>dbt</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="project-link">View on GitHub &rarr;</a>
+                        <a href="https://github.com/Ldragon27/airflow-data-pipeline" class="project-link">View on GitHub &rarr;</a>
                     </div>
                 </div>
             </div>
 
             <div class="project-card">
                 <div class="project-content">
-                    <h3>Real-time Data Dashboard</h3>
-                    <p class="project-description">Built a real-time analytics dashboard using Python and Power BI to visualize streaming data from a public API. The system ingests, processes, and displays key metrics, providing instant insights into live trends.</p>
+                    <h3>Real-time IOT Data Dashboard</h3>
+                    <p class="project-description">Built a real-time analytics dashboard using Python and C# to visualize streaming data from socket connections. Using a Raspberry Pi with a ToF sensor to count how many people have entered a room. That data is send from the Pi to a PC that will display that information on our website. The data is transferred via socket connections. With the Pi as the server and the PC as the client.</p>
                     <div class="tech-stack">
                         <span>Python</span>
-                        <span>Power BI</span>
-                        <span>REST APIs</span>
-                        <span>Pandas</span>
+                        <span>C#</span>
+                        <span>Socket Connection</span>
+                        <span>TCP</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="project-link">Live Demo &rarr;</a>
-                        <a href="#" class="project-link">View on GitHub &rarr;</a>
+                        <a href="https://github.com/CS-370-Term-Project/RoomMonitor" class="project-link">View on GitHub &rarr;</a>
                     </div>
                 </div>
             </div>
