--- a/resume.html
+++ b/resume.html
@@ -23,17 +23,17 @@
     <main class="main-content">
         <section class="page-header">
             <h2>My Experience & Skills</h2>
-            <a href="#" class="btn btn-primary">Download PDF Resume</a>
+            <a href="assets/Lorenzo_Data_Engineer_Resume.pdf" class="btn btn-primary">Download PDF Resume</a>
         </section>
 
         <section class="resume-section">
-            <h3>Professional Experience</h3>
+            <h3>Current Role</h3>
             <div class="resume-item">
-                <h4>Data Analyst</h4>
-                <p class="resume-details"><em>Company Name | Start Date - Present</em></p>
+                <h4>Software Engineer</h4>
+                <p class="resume-details"><em>Colorado State Univerity | Mar 2024 - Present</em></p>
                 <ul>
                     <li>Engineered and automated ETL processes using Snowflake, reducing data processing time by 30%.</li>
-                    <li>Developed and deployed 15+ interactive Power BI dashboards using dimensional modeling, enabling data-driven decision-making for key stakeholders.</li>
+                    <li>Developed and deployed interactive Power BI dashboards using dimensional modeling, enabling data-driven decision-making for key stakeholders.</li>
                     <li>Optimized complex SQL queries for large-scale datasets, improving query performance by 40%.</li>
                     <li>Authored Python scripts with pandas for advanced data cleaning and transformation, ensuring data integrity across all pipelines.</li>
                 </ul>
@@ -44,7 +44,7 @@
             <h3>Education</h3>
             <div class="resume-item">
                 <h4>Bachelor of Science in Computer Science</h4>
-                <p class="resume-details"><em>Your University | Expected Graduation: May 2026</em></p>
+                <p class="resume-details"><em>Colorado State Univerity | Expected Graduation: 2026</em></p>
             </div>
         </section>
         
@@ -53,11 +53,11 @@
             <div class="skills-grid">
                 <div class="skill-category">
                     <h4>Languages</h4>
-                    <p>Python, SQL, Java</p>
+                    <p>Python, SQL, C#</p>
                 </div>
                 <div class="skill-category">
                     <h4>Data & Cloud</h4>
-                    <p>Snowflake, AWS (S3, EC2), GCP, Power BI, dbt, Airflow</p>
+                    <p>Snowflake, AWS (S3, EC2, Lambda), Power BI, MS Fabric, Airflow</p>
                 </div>
                 <div class="skill-category">
                     <h4>Software Engineering</h4>
